--- a/interface/index.html
+++ b/interface/index.html
@@ -11,6 +11,8 @@
     <div id="container">
       <div class="speed-container">
         <div class="animate__animated pad">
+          <div class="cover"><div class="gauge-a"></div></div>
+          <div class="cover"><div class="gauge-b"></div></div>
           <div class="overlay">
             <div class="speed-data">
               <p class="glow title">Speed</p>
